--- a/todoapp.yml
+++ b/todoapp.yml
@@ -2,11 +2,17 @@
   hosts: all
   become: yes
   tasks:
-    - name: apt update
+    - name: Install nginx
       apt:
         name: nginx
         update_cache: yes
         state: present
+    
+    - name: start service
+      systemd:
+        name: nginx
+        state: started
+        enabled: yes
 
 
 
