--- a/02.vars.yml
+++ b/02.vars.yml
@@ -1,9 +1,31 @@
 - name: Demo on vars
   hosts: all
+  vars_files:
+    - example-vars.yml
   vars:
     URL: play.example.com
     PROJECT: example
+  vars_prompt:
+    - name: URL
+      prompt: Enter URL
+      private: no
   tasks:
     - name: print URL
       debug:
         msg: URL = {{ URL }}
+    - name: print URL from task
+      debug:
+        msg: URL = {{ URL }}
+      vars:
+        URL: task.example.com
+
+- name: Demo on Dynamic vars
+  hosts: all
+  tasks:
+    - name: Gather date
+      shell: date +%F
+      register: out
+    - name: Print Date
+      debug:
+        msg: Date = {{ out.stdout }}
+        
