--- a/02.vars.yml
+++ b/02.vars.yml
@@ -25,7 +25,13 @@
     - name: Gather date
       shell: date +%F
       register: out
+
     - name: Print Date
       debug:
         msg: Date = {{ out.stdout }}
+
+    - name: Set a fact
+      set_fact:
+        DATE: "{{ out.stdout }}"
         
+
