--- a/02.vars.yml
+++ b/02.vars.yml
@@ -33,5 +33,10 @@
     - name: Set a fact
       set_fact:
         DATE: "{{ out.stdout }}"
+
+    - name: Print DATE
+      debug:
+        msg: DATE = {{ DATE }}
         
+
 
