--- a/04.filters.yml
+++ b/04.filters.yml
@@ -13,3 +13,8 @@
     - name: print last column
       debug:
         msg: "{{ URL.split('/') | last }}"
+
+    - name: Print tag data
+      debug:
+        msg: "{{ tag_data | dict2items }}"
+
