--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -4,7 +4,7 @@
     update_cache: yes
     state: present
 
-- name: Download foo.conf
+- name: Download frontend from nexus
   get_url:
     url: http://172.31.13.117:8081/repository/frontend/frontend-{{APP-VERSION}}.zip
     dest: /tmp/frontend.zip
