--- a/roles/frontend/tasks/main.yml
+++ b/roles/frontend/tasks/main.yml
@@ -4,6 +4,18 @@
     update_cache: yes
     state: present
 
+- name: Install NPM
+  apt:
+    name: npm 
+    state: present
+    update_cache: yes
+
+- name: Install nodejs
+  apt:
+    name: nodejs
+    state: present
+
+
 - name: Download frontend from nexus
   get_url:
     url: http://172.31.13.117:8081/repository/frontend/frontend-{{APP-VERSION}}.zip
