--- a/roles/common/tasks/nodejs.yml
+++ b/roles/common/tasks/nodejs.yml
@@ -4,7 +4,7 @@
     update_cache: yes
     state: present
 
-- name: Copy {{CCOMPONENT}} Service file
+- name: Copy {{COMPONENT}} Service file
   copy:
     src: {{COMPONENT}}.service
     dest: /etc/systemd/system/{{COMPONENT}}.service
